    * alsa9 and alsa1x replaced by alsa audio output driver
    * ALSA audio output driver always uses specified device, even for hwac3
    * support for mixer channel selection in the ALSA audio output driver
    * jpeg video output driver now supports output to multiple directories
    * audio output driver for the polypaudio sound server
    * yuv4mpeg video output now has a file= suboption.

    Decoders:
    * "experimental" support for 20 and 24 bit LPCM (DVD-Audio)
    * libmpeg2 updated to 0.4.0b
    * libfaad2 updated to 2.1beta CVS snapshot
    * DTS decoding via lavc
    * Windows Media Audio 9 Voice support via binary DLL
    * Windows Media Video 9 Advanced support via binary DLL
    * Windows Media Screen Codec 2 support via binary DLL
    * Windows Media Image Codec support via binary DLL
    * Windows Media Image 2 Codec support via binary DLL
    * VDOWave video support via binary DLL
    * Miro VideoXL video support via lavc
    * Creative ADPCM audio support via lavc or binary DLL
    * IBM Ultimotion video support via lavc
    * Micronas Speech codec support via binary DLL
    * H.261 video codec support via lavc
    * TechSmith Camtasia video codec support via lavc
    * sonic audio codec support via lavc
    * snow video codec support via lavc
    * QuickDraw video support via lavc
    * Cinepak, CYUV and RoQ audio/video moved to FFmpeg
    * Vianet Lsvx video support via binary DLL

    Demuxers:
    * fix -nosound and -novideo for NSV
    * subtitle switching and language code displaying for Matroska
    * support .vp5 file format (AVI variant)
    * seeking for audio-only ASF files fixed
    * improved MP3 detection
    * AVC in .mp4 files
    * raw H.261 files via lavf
    * improved seeking precision in MPEG files
    * better subtitle language code handling for MKV files
    * support DVHS files and H.264 over MPEG-TS

    Streaming:
    * -cache-min and -cache-prefill options added
    * compilation fix for newer LIVE.COM versions